<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/circle_rect1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_title"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_link_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:textSize="14sp"
            tools:text="www.baidu.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/link_url"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_link_url"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:textSize="14sp"
            tools:text="www.baidu.com" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_dbdbdb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_dbdbdb" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>