<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <!--  隐藏的侧滑布局  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_link_copy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_313131"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/link_copy"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_link_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/link_open"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_link_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/tool_bar_color"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/link_edit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_link_del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_dc5c1a"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/link_delete"
            android:textColor="@color/white" />

    </LinearLayout>

    <!--  显示的布局  -->
    <LinearLayout
        android:id="@+id/ll_link_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="百度一下" />

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="10sp"
            tools:text="www.baidu.com" />
    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>