<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/tool_bar_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end">

            <ImageView
                android:id="@+id/iv_score"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/score" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:src="@color/white" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_go_login"
                android:textColor="@color/color_dbdbdb"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_score_default"
            android:textColor="@color/color_dbdbdb"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_dbdbdb"
            android:textSize="12sp"
            tools:text="@string/user_level_default" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_my"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>