<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_author"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">


        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/ll_go_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_go_reg"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/app_input_user"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/app_input_password"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <Button
                android:id="@+id/btn_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_circle"
                android:text="@string/app_login"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/left_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/app_go_login"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/et_reg_username"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/app_input_user"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/et_reg_pwd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/app_input_password"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/et_reg_repwd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/app_input_password"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <Button
                android:id="@+id/btn_register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_circle"
                android:text="@string/app_register"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>